--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>March Madness 2025 Tracker</title>
-    <meta name="description" content="Generated using some magic" />
+    <meta name="description" content="Generated using some madness" />
     <meta name="author" content="sidthakur08" />
   </head>
 
